Fix card text alignment

--- a/assets/component-article-card.css
+++ b/assets/component-article-card.css
@@ -125,6 +125,10 @@
   margin-top: auto;
 }
 
+.article-card__excerpt {
+  width: 100%;
+}
+
 .article-card__link:not(:only-child) {
   margin-right: 3rem;
 }
